--- a/ProyectoFinal/BackEnd/LMS/src/main/resources/application.properties
+++ b/ProyectoFinal/BackEnd/LMS/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backendlms?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://uuabeimdh0solj7v:UK5S7M7Ent4e7O0dlqG8@bk5x3lc831xqaenlljm1-mysql.services.clever-cloud.com:3306/bk5x3lc831xqaenlljm1
+spring.datasource.username=uuabeimdh0solj7v
+spring.datasource.password=UK5S7M7Ent4e7O0dlqG8
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+jws.secret = secret
+jws.expiration = 3000
